--- a/templates/register.html
+++ b/templates/register.html
@@ -18,9 +18,9 @@
   <link rel="shortcut icon"/>
 </head>
 
-<body style="background-image: url(https://the-nexus.herokuapp.com/static/img/bg/bg.jpg)">
+<body>
   <div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
+    <div class="container-fluid page-body-wrapper full-page-wrapper" style="background-image: url(https://the-nexus.herokuapp.com/static/img/bg/bg.jpg)">
       <div class="content-wrapper d-flex align-items-center auth px-0">
         <div class="row w-100 mx-0">
           <div class="col-lg-4 mx-auto">
