--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -203,7 +203,7 @@
             <div class="col-md-12 grid-margin">
               <div class="row">
                 <div class="col-12 col-xl-5 mb-4 mb-xl-0">
-                  <h4 class="font-weight-light mr-2 mb-1" style="font-size: 50;" >Welcome, {{ user_info["name"] }}!</h4>
+                  <h4 class="font-weight-light mr-2 mb-1" style="font-size: 50px;" >Welcome, {{ user_info["name"] }}!</h4>
                 </div>
               </div>
             </div>
