--- a/templates/register.html
+++ b/templates/register.html
@@ -288,6 +288,12 @@
     }
   </style>
   <!-- endinject -->
+  <script
+  src="https://code.jquery.com/jquery-3.5.0.slim.min.js"
+  integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs="
+  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"></script>
   <script>
     $('input[type="submit"]').click(function() {
       $('.login').addClass('test')
