--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,91 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Nexus // Registration</title>
-  <!-- plugins:css -->
+
+  <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
+  <script>
+    $('input[type="submit"]').click(function() {
+      $('.login').addClass('test')
+      setTimeout(function() {
+        $('.login').addClass('testtwo')
+      }, 300);
+      setTimeout(function() {
+        $(".authent").show().animate({
+          right: -320
+        }, {
+          easing: 'easeOutQuint',
+          duration: 600,
+          queue: false
+        });
+        $(".authent").animate({
+          opacity: 1
+        }, {
+          duration: 200,
+          queue: false
+        }).addClass('visible');
+      }, 500);
+      setTimeout(function() {
+        $(".authent").show().animate({
+          right: 90
+        }, {
+          easing: 'easeOutQuint',
+          duration: 600,
+          queue: false
+        });
+        $(".authent").animate({
+          opacity: 0
+        }, {
+          duration: 200,
+          queue: false
+        }).addClass('visible');
+        $('.login').removeClass('testtwo')
+      }, 2500);
+      setTimeout(function() {
+        $('.login').removeClass('test')
+        $('.login div').fadeOut(123);
+      }, 2800);
+      setTimeout(function() {
+        $('.success').fadeIn();
+      }, 3200);
+    });
+
+    $('input[type="text"],input[type="password"]').focus(function() {
+      $(this).prev().animate({
+        'opacity': '1'
+      }, 200)
+    });
+    $('input[type="text"],input[type="password"]').blur(function() {
+      $(this).prev().animate({
+        'opacity': '.5'
+      }, 200)
+    });
+
+    $('input[type="text"],input[type="password"]').keyup(function() {
+      if (!$(this).val() == '') {
+        $(this).next().animate({
+          'opacity': '1',
+          'right': '30'
+        }, 200)
+      } else {
+        $(this).next().animate({
+          'opacity': '0',
+          'right': '20'
+        }, 200)
+      }
+    });
+
+    var open = 0;
+    $('.tab').click(function() {
+      $(this).fadeOut(200, function() {
+        $(this).parent().animate({
+          'left': '0'
+        })
+      });
+    });
+  </script>
   <style>
     @import url(https://fonts.googleapis.com/css?family=Gudea:400,700);
 
@@ -287,94 +371,7 @@
       width: 30px;
     }
   </style>
-  <!-- endinject -->
-  <script
-  src="https://code.jquery.com/jquery-3.5.0.slim.min.js"
-  integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs="
-  crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-  <script>
-    $('input[type="submit"]').click(function() {
-      $('.login').addClass('test')
-      setTimeout(function() {
-        $('.login').addClass('testtwo')
-      }, 300);
-      setTimeout(function() {
-        $(".authent").show().animate({
-          right: -320
-        }, {
-          easing: 'easeOutQuint',
-          duration: 600,
-          queue: false
-        });
-        $(".authent").animate({
-          opacity: 1
-        }, {
-          duration: 200,
-          queue: false
-        }).addClass('visible');
-      }, 500);
-      setTimeout(function() {
-        $(".authent").show().animate({
-          right: 90
-        }, {
-          easing: 'easeOutQuint',
-          duration: 600,
-          queue: false
-        });
-        $(".authent").animate({
-          opacity: 0
-        }, {
-          duration: 200,
-          queue: false
-        }).addClass('visible');
-        $('.login').removeClass('testtwo')
-      }, 2500);
-      setTimeout(function() {
-        $('.login').removeClass('test')
-        $('.login div').fadeOut(123);
-      }, 2800);
-      setTimeout(function() {
-        $('.success').fadeIn();
-      }, 3200);
-    });
 
-    $('input[type="text"],input[type="password"]').focus(function() {
-      $(this).prev().animate({
-        'opacity': '1'
-      }, 200)
-    });
-    $('input[type="text"],input[type="password"]').blur(function() {
-      $(this).prev().animate({
-        'opacity': '.5'
-      }, 200)
-    });
-
-    $('input[type="text"],input[type="password"]').keyup(function() {
-      if (!$(this).val() == '') {
-        $(this).next().animate({
-          'opacity': '1',
-          'right': '30'
-        }, 200)
-      } else {
-        $(this).next().animate({
-          'opacity': '0',
-          'right': '20'
-        }, 200)
-      }
-    });
-
-    var open = 0;
-    $('.tab').click(function() {
-      $(this).fadeOut(200, function() {
-        $(this).parent().animate({
-          'left': '0'
-        })
-      });
-    });
-  </script>
-  <link rel="shortcut icon" />
 </head>
 
 <body>
@@ -429,18 +426,6 @@
   <div class='love'>
     <p>Made with <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/love_copy.png" /> by <a href='https://www.jamiecoulter.co.uk' target='_blank'> Jcoulterdesign </a></p>
   </div>
-  <!-- container-scroller -->
-  <!-- plugins:js -->
-  <script src="{{url_for('static',filename='vendors/js/vendor.bundle.base.js')}}"></script>
-  <!-- endinject -->
-  <!-- Plugin js for this page -->
-  <!-- End plugin js for this page -->
-  <script src="{{url_for('static',filename='js/off-canvas.js')}}"></script>
-  <script src="{{url_for('static',filename='js/hoverable-collapse.js')}}"></script>
-  <script src="{{url_for('static',filename='js/template.js')}}"></script>
-  <script src="{{url_for('static',filename='js/settings.js')}}"></script>
-  <script src="{{url_for('static',filename='js/todolist.js')}}"></script>
-  <!-- endinject -->
 </body>
 
 </html>
