--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,7 @@
   <link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
   <title>Nexus // Registration</title>
   <link rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <style>
     @import url(https://fonts.googleapis.com/css?family=Gudea:400,700);
 
@@ -306,14 +307,14 @@
   </div>
   <div class='login'>
     <div class='login_title'>
-      <span>Create your Nexus™ Password</span>
+      <span>Complete your Nexus™ Registration</span>
     </div>
     <div class='login_fields'>
       <div class='login_fields__user'>
         <div class='icon'>
           <i class="fas fa-user"></i>
         </div>
-        <input placeholder='Username' type='text'>
+        <input placeholder='Email Address' type='text'>
         <div class='validation'>
           <i class="fas fa-check"></i>
         </div>
@@ -323,7 +324,7 @@
         <div class='icon'>
           <i class="fas fa-key"></i>
         </div>
-        <input placeholder='Password' type='password'>
+        <input id="pass" placeholder='Password' type='password'>
         <div class='validation'>
           <i class="fas fa-check"></i>
         </div>
@@ -350,6 +351,19 @@
   <div class='love'>
     <p>Copyright © 2020 <a href="http://www.thenexus.cloud/" target="_blank">Nexus</a>. All rights reserved.</span></p>
   </div>
+  <script>
+    function submitNewPassword(){
+      pass = document.getElementById("pass").value
+      axios({
+        method:'post',
+        url:'/changepass',
+        data:{
+          pass:pass,
+        }
+      }).catch(e=>console.log(e)).then(data => {alert(data["data"]); window.location.reload();})
+      return false;
+    }
+  </script>
   <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
@@ -397,6 +411,7 @@
       setTimeout(function() {
         $('.success').fadeIn();
       }, 3200);
+      window.location.replace("http://www.thenexus.cloud/access");
     });
 
     $('input[type="text"],input[type="password"]').focus(function() {
