--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -203,13 +203,13 @@
             <div class="col-md-12 grid-margin">
               <div class="row">
                 <div class="col-12 col-xl-5 mb-4 mb-xl-0">
-                  <h4 class="font-weight-light mr-2 mb-1" style="font-size: 50px;" >Welcome, {{ user_info["name"] }}!</h4>
+                  <h4 class="font-weight-light col-12 " style="font-size: 40px;" >Welcome, {{ user_info["name"] }}!</h4>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3 grid-margin stretch-card">
+            <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Inline forms</h4>
