--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -76,13 +76,13 @@
                       </div>
                       <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="smurray@lawrenceville.org">
                     </div>
-                    <div class="form-check mr-sm-2">
+                    <div class="form-check mx-sm-4">
                       <label class="form-check-label">
                         <input type="checkbox" class="form-check-input" checked="">
                         Notify Pinner
                       <i class="input-helper"></i></label>
                     </div>
-                    <button type="submit" class="btn btn-primary mb-2">Save</button>
+                    <button type="submit" class="btn btn-primary mb-2">Submit</button>
                   </form>
                 </div>
               </div>
