--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -88,6 +88,26 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-md-4 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Downloads</h4>
+                  <p class="card-description">The Nexus™ Cloud</code></p>
+                  <div class="template-demo">
+                    <button type="button" class="btnbtn-lg btn-block btn-icon-text" style="background-image: linear-gradient(#FE5B34, #FE378C)">
+                      <i class="ti-download btn-icon-prepend"></i>
+                      Nexus™ Cloud (Mac)
+                    </button>
+                    <button type="button" class="btnbtn-lg btn-block btn-icon-text" style="background-image: linear-gradient(#FE5B34, #FE378C)">
+                      <i class="ti-download btn-icon-prepend"></i>
+                      Nexus™ Cloud (Windows)
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div> <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
