--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -99,7 +99,7 @@
                       <i class="ti-download btn-icon-prepend"></i>
                       Nexus™ Cloud (Mac)
                     </button>
-                    <button type="button" class="btn btn-lg btn-block btn-icon-text" style="background-image: linear-gradient(#FE5B34, #FE378C)">
+                    <button type="button" class="btn btn-lg btn-block btn-icon-text" style="background-image: linear-gradient(#aa4b6b, #6b6b83, #3b8d99)">
                       <i class="ti-download btn-icon-prepend"></i>
                       Nexus™ Cloud (Windows)
                     </button>
