--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -95,11 +95,11 @@
                   <h4 class="card-title">Downloads</h4>
                   <p class="card-description">The Nexus™ Cloud</code></p>
                   <div class="template-demo">
-                    <button type="button" class="btn btn-lg btn-block btn-icon-text" style="background-image: linear-gradient(#FE5B34, #FE378C)">
+                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#FF416C, #FF4B2B)">
                       <i class="ti-download btn-icon-prepend"></i>
                       Nexus™ Cloud (Mac)
                     </button>
-                    <button type="button" class="btn btn-lg btn-block btn-icon-text" style="background-image: linear-gradient(#aa4b6b, #6b6b83, #3b8d99)">
+                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#12c2e9, #c471ed, #3b8d99)">
                       <i class="ti-download btn-icon-prepend"></i>
                       Nexus™ Cloud (Windows)
                     </button>
