--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -99,7 +99,7 @@
                       <i class="ti-download btn-icon-prepend"></i>
                       Nexus™ Cloud (Mac)
                     </button>
-                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#12c2e9, #c471ed, #3b8d99)">
+                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#FC466B, #3F5EFB">
                       <i class="ti-download btn-icon-prepend"></i>
                       Nexus™ Cloud (Windows)
                     </button>
