--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -97,11 +97,11 @@
                   <div class="template-demo">
                     <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#FF416C, #FF4B2B)">
                       <i class="ti-download btn-icon-prepend"></i>
-                      Nexus™ Cloud (Mac)
+                      <span style="font-size: 18px">Nexus™ Cloud (Mac)</span>
                     </button>
-                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#8360c3, #2ebf91">
+                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#7F7FD5, #86A8E7, #91EAE4)">
                       <i class="ti-download btn-icon-prepend"></i>
-                      Nexus™ Cloud (Windows)
+                      <span style="font-size: 18px">Nexus™ Cloud (Windows)</span>
                     </button>
                   </div>
                 </div>
