--- a/templates/access.html
+++ b/templates/access.html
@@ -1,87 +1,134 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <!-- Bootstrap stuff -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{url_for('static', filename='custom_stylesheet.css')}}">
-
-<!--   <link rel="stylesheet" href="{{url_for('static', filename='stylesheet.css')}}">
- -->  <!-- JQuery for front end -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Bungee&display=swap" rel="stylesheet">
-
-  <!-- get fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Bungee|Roboto&display=swap" rel="stylesheet">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Nexus // Access Panel</title> <!-- plugins:css -->
+  <link rel="stylesheet" href="{{url_for('static',filename='vendors/ti-icons/css/themify-icons.css')}}">
+  <link rel="stylesheet" href="{{url_for('static',filename='vendors/css/vendor.bundle.base.css')}}"> <!-- endinject -->
+  <link rel="stylesheet" href="{{url_for('static',filename='css/vertical-layout-dark/style.css')}}"> <!-- endinject -->
+  <link rel="shortcut icon" href="{{url_for('static',filename='img/logo/nexus-icon.png')}}" />
 </head>
-<style>
-  .btn-primary{
-    background-color:#E96E6E;
-    border:none;
-  }
-</style>
-<body style="padding:20px;background-color:#413E4A">
-  <h1 style="text-align:center;color:white;">Nexus Access</h1>
-  {% if not logged_in %}
-  <div style="text-align:center">
-   <a href="/auth/google"><button class="btn btn-primary" style="margin:auto 10px;width:50%;background-color:#E96E6E;border:none;">Log in</button></a>
- </div>
- {% else %}
- <div class="card">
-  <div class="card-body">
-   <h2 style="margin:10px">Welcome {{user_info["name"]}}</h2>
-   <a href="/logout"><button class="btn btn-primary">Log out</button></a>
- </div>
-  </div>
 
-   <div class="card">
-    <div class="card-body">
-      <h3>Your current password <span style="font-size:10px">(refresh to see new password)</span></h3>
-      <p id="current-pass" style="display:none">{{password}}</p>
-      <button class="btn btn-primary" onclick="toggleShow('current-pass')" >Toggle show password</button>
-    </div>
-   </div>
-
-   <div class="card">
-    <div class="card-body">
-    <h3>Set new password</h3>
-    <form>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="newpass">
+<body>
+  <div class="container-scroller">
+    <!-- partial:partials/_navbar.html -->
+    <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"> <a class="navbar-brand brand-logo mr-5" href="/"><img
+            src="{{url_for('static',filename='img/logo/nexus-gradient-full.svg')}}" class="mr-2" alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="/"><img
+            src="{{url_for('static',filename='img/logo/nexus-icon-white.svg')}}" alt="logo" /></a> </div>
+      <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end"> <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize"> <span class="ti-layout-grid2"></span> </button>
+        <ul class="navbar-nav mr-lg-2">
+          <li class="nav-item nav-search d-none d-lg-block">
+            <div class="input-group">
+              <div class="input-group-prepend hover-cursor" id="navbar-search-icon"> <span class="input-group-text" id="search"> <i class="ti-search"></i> </span> </div> <input type="text" class="form-control" id="navbar-search-input"
+                placeholder="Search now" aria-label="search" aria-describedby="search">
+            </div>
+          </li>
+        </ul>
+        <ul class="navbar-nav navbar-nav-right">
+          <li class="nav-item nav-settings d-none d-lg-flex"> <a class="nav-link" href="#"> <i class="ti-more"></i> </a> </li>
+        </ul> <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas"> <span class="ti-layout-grid2"></span> </button>
       </div>
-      <button onclick="submitNewPassword()" class="btn btn-primary">Set new password</button>
-    </form>
-    </div>
-   </div>
+    </nav> <!-- partial -->
+    <div class="container-fluid page-body-wrapper">
+      <!-- partial:partials/_settings-panel.html -->
+      <div id="right-sidebar" class="settings-panel"> <i class="settings-close ti-close"></i>
+        <ul class="nav nav-tabs border-top" id="setting-panel" role="tablist">
+          <li class="nav-item"> <a class="nav-link active" id="todo-tab" data-toggle="tab" href="#todo-section" role="tab" aria-controls="todo-section" aria-expanded="true">TO DO LIST</a> </li>
+          <li class="nav-item"> <a class="nav-link" id="chats-tab" data-toggle="tab" href="#chats-section" role="tab" aria-controls="chats-section">CHATS</a> </li>
+        </ul>
+      </div> <!-- partial -->
+      <!-- partial:partials/_sidebar.html -->
+      <nav class="sidebar sidebar-offcanvas" id="sidebar">
+        <ul class="nav">
+          <li class="nav-item"> <a class="nav-link" href="/"> <i class="ti-home menu-icon"></i> <span class="menu-title">Dashboard</span> </a> </li>
+        </ul>
+      </nav> <!-- partial -->
+      <div class="main-panel">
+        <div class="content-wrapper">
+          <div class="row">
+            <div class="col-md-12 grid-margin">
+              <div class="row">
+                <div class="col-12 col-xl-5 mb-4 mb-xl-0">
+                  <h4 class="font-weight-light col-12 " style="font-size: 40px;" >Welcome, {{ user_info["name"] }}!</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Pinner Selection</h4>
+                  <p class="card-description">
+                    Enter your pinner's information (full name and email) to grant pinning privileges in the Nexus Cloud™.
+                  </p>
+                  <form class="form-inline">
+                    <label class="sr-only" for="inlineFormInputName2">Name</label>
+                    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Steve Murray">
 
- {% endif %}
+                    <label class="sr-only" for="inlineFormInputGroupUsername2">Email Address</label>
+                    <div class="input-group mb-2 mr-sm-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">@</div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroupUsername2" style="width: 220px;" placeholder="smurray@lawrenceville.org">
+                    </div>
+                    <div class="form-check mx-sm-4">
+                      <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input" checked="">
+                        Notify Pinner
+                      <i class="input-helper"></i></label>
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-5 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Downloads</h4>
+                  <p class="card-description">The Nexus™ Cloud</code></p>
+                  <div class="template-demo">
+                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#FF416C, #FF4B2B)">
+                      <i class="ti-download btn-icon-prepend"></i>
+                      <span style="font-size: 17px">Nexus™ Cloud (Mac)</span>
+                    </button>
+                    <button type="button" class="btn btn-lg btn-block btn-dark btn-icon-text" style="background-image: linear-gradient(#7F7FD5, #86A8E7, #91EAE4)">
+                      <i class="ti-download btn-icon-prepend"></i>
+                      <span style="font-size: 17px">Nexus™ Cloud (Windows)</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> <!-- content-wrapper ends -->
+        <!-- partial:partials/_footer.html -->
+        <footer class="footer">
+          <div class="d-sm-flex justify-content-center justify-content-sm-between"> <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a href="http://www.thenexus.cloud/"
+                target="_blank">Nexus</a>. All rights reserved.</span> <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span> </div>
+        </footer> <!-- partial -->
+      </div> <!-- main-panel ends -->
+    </div> <!-- page-body-wrapper ends -->
+  </div> <!-- container-scroller -->
+  <!-- plugins:js -->
+  <script src="{{url_for('static',filename='vendors/js/vendor.bundle.base.js')}}"></script> <!-- endinject -->
+  <!-- Plugin js for this page -->
+  <script src="{{url_for('static',filename='vendors/chart.js/Chart.min.js')}}"></script> <!-- End plugin js for this page -->
+  <!-- inject:js -->
+  <script src="{{url_for('static',filename='js/off-canvas.js')}}"></script>
+  <script src="{{url_for('static',filename='js/hoverable-collapse.js')}}"></script>
+  <script src="{{url_for('static',filename='js/template.js')}}"></script>
+  <script src="{{url_for('static',filename='js/settings.js')}}"></script>
+  <script src="{{url_for('static',filename='js/todolist.js')}}"></script> <!-- endinject -->
+  <!-- Custom js for this page-->
+  <script src="{{url_for('static',filename='js/dashboard.js')}}"></script> <!-- End custom js for this page-->
 </body>
 
-<script>
-  function submitNewPassword(){
-    pass = document.getElementById("newpass").value
-    axios({
-      method:'post',
-      url:'/changepass',
-      data:{
-        pass:pass,
-      }
-    }).catch(e=>console.log(e)).then(data => {alert(data["data"]); window.location.reload();})
-    return false;
-  }
-
-  function toggleShow(id) {
-    var x = document.getElementById(id);
-    if (x.style.display === "none") {
-      x.style.display = "block";
-    } else {
-      x.style.display = "none";
-    }
-  }
-
-</script>
+</html>
